Fix sizing and contrast issues.

--- a/viewport/viewport.css
+++ b/viewport/viewport.css
@@ -21,7 +21,7 @@ html {
 }
 
 .browser > .content {
-  border: 1px solid black;
+  outline: 1px solid black;
 }
 
 .screen {
@@ -41,6 +41,7 @@ html {
   transform-origin: top left;
   touch-action: none;
   user-select: none;
+  box-sizing: border-box;
 }
 
 .flex {
@@ -57,19 +58,24 @@ html {
 
 .header {
   height: var(--header-height);
-  background: rgba(127, 127, 127, 0.5);
+  background: rgba(127, 127, 127, 0.8);
 }
 
 .sidebar {
   top: var(--header-height);
   height: calc(var(--vh) - var(--header-height) - var(--footer-height));
   width: var(--sidebar-width);
-  background: rgba(127, 127, 180, 0.5);
+  background: rgba(127, 127, 180, 0.8);
 }
 
 .footer {
   height: var(--footer-height);
-  background: rgba(80, 80, 80, 0.5);
+  color: white;
+  background: rgba(80, 80, 80, 0.8);
+}
+
+input {
+  width: 80%;
 }
 
 input:focus {
